@@ -5,7 +5,6 @@ Steps for releasing a new CGDB version, follow these in order.
     Make sure you have the appropriate versions of these installed:
       * aclocal (GNU automake) 1.9.5
       * autoconf (GNU Autoconf) 2.59
-      * libtool ( GNU libtool ) 1.5.6
       * m4      ( GNU m4 )     1.4.3
 
 -  This section generates all the applicable documentation. Make sure the file
